updated status/halt api
