# openapi.yaml
@@ -4,14 +4,16 @@ info:
   version: 3.0-non-ampcs
 openapi: 3.1.0
 paths:
-  /api/v3/custom_script/halt:
+  /api/v3/custom_script/{script_run_id}/halt:
     post:
       operationId: script_halt_api_v3_custom_script_halt_post
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ScriptHaltBodyModel'
+      parameters:
+        - in: path
+          name: script_run_id
+          required: true
+          schema:
+            title: Script Run Id
+            type: string
         required: true
       responses:
         '204':
@@ -77,14 +79,16 @@ paths:
       summary: Start execution of a custom script
       tags:
         - SCRIPT
-  /api/v3/custom_script/status:
+  /api/v3/custom_script/{script_run_id}:
     get:
       operationId: script_status_api_v3_custom_script_status_get
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ScriptStatusBodyModel'
+      parameters:
+        - in: path
+          name: script_run_id
+          required: true
+          schema:
+            title: Script Run Id
+            type: string
       responses:
         '200':
           content:
